[project]
name = "fpsl"
version = "0.1.0"
description = "Fokker-Planck Score Learning: Efficient free-energy estimation under periodic boundary conditions"
readme = "README.md"
authors = [
    { name = "braniii" }
]
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.21.0",
    "flax>=0.10.6",
    "jax>=0.6.2",
    "jax-dataloader>=0.1.3",
    "jaxtyping>=0.2.36",
    "optax>=0.2.5",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.6.2",
]
tpu = [
    "jax[tpu]>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
