[project]
name = "fpsl"
version = "0.1.0"
description = "Fokker-Planck Score Learning: Efficient free-energy estimation under periodic boundary conditions"
readme = "README.md"
authors = [
    { name = "braniii" }
]
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.21.0",
    "flax>=0.10.6",
    "jax>=0.6.2",
    "jax-dataloader>=0.1.3",
    "jaxtyping>=0.2.36",
    "matplotlib>=3.10.3",
    "optax>=0.2.5",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.6.2",
]
tpu = [
    "jax[tpu]>=0.6.2",
]

[tool.uv]
conflicts = [
    [
      { extra = "cuda" },
      { extra = "tpu" },
    ],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "C901"]
ignore = ["F722"]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs}/*" = ["E402"]
